discussion/kv_engine/133990/133990_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Expose stats_audit for Prometheus

Change-Id: I60d78f36658f8d8e8b445d3a57d31af7707f622e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-07 14:20:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-07 18:03:20.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25539/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25539/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3712/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: use of undeclared identifier "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: use of undeclared identifier "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:36: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:38: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:40: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:41: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                        ^
                                        ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3712/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3712/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29490/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\include\statistics\stat_units.h(85): error C2039: "string_view_literals": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29490/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4059/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4942/ : FAILURE

Compile error at [2020-08-07T14:30:44.723Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 213>::_Type {aka cb::stats::StatSpec [213]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4942/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5128/ : FAILURE

Compile error at [2020-08-07T14:36:53.529Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 213>::_Type {aka cb::stats::StatSpec [213]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5128/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12844/ : FAILURE

Compile error at [2020-08-07T14:48:38.245Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 213>::_Type {aka cb::stats::StatSpec [213]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12844/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5031/ : FAILURE

Compile error at [2020-08-07T14:42:16.924Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 213>::_Type {aka cb::stats::StatSpec [213]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5031/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2227/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
